# flecsi

./: .buildinfo  .clang-format  .gitignore  .gitlab-ci.yml  .version  CMakeLists.txt  LICENSE  README.md  VERSION  genindex.html  index.html  objects.inv  options.json  search.html  searchindex.js
flecsi/: CMakeLists.txt  config.hh.in  data.hh  execution.hh  flog.hh  io.hh  library.cmake  runtime.hh  topology.hh  utilities.hh
flecsi/data/: CMakeLists.txt  accessor.hh  backend.hh  coloring.hh  copy.hh  copy_plan.hh  data.cc  field.hh  field_info.hh  layout.hh  map.hh  privilege.hh  reference.hh  topology.hh  topology_accessor.hh  topology_slot.hh
flecsi/data/hpx/: copy.hh  policy.hh
flecsi/data/leg/: copy.hh  policy.hh
flecsi/data/local/: copy.cc  copy.hh  policy.hh  storage.hh
flecsi/data/mpi/: copy.hh  policy.hh
flecsi/data/test/: data.cc  privilege_pack.cc
flecsi/exec/: CMakeLists.txt  backend.hh  bind_parameters.hh  buffers.hh  fold.hh  fwd.hh  kernel.hh  kernel_interface.hh  launch.hh  prolog.hh  task_attributes.hh  tracer.hh
flecsi/exec/hpx/: bind_accessors.hh  future.hh  policy.hh  reduction_wrapper.hh  task_prologue.hh
flecsi/exec/leg/: bind_accessors.hh  future.hh  policy.hh  reduction_wrapper.hh  task_prologue.hh  task_wrapper.hh  tracer.hh
flecsi/exec/local/: bind_parameters.hh
flecsi/exec/mpi/: future.hh  policy.hh  reduction_wrapper.hh  task_prologue.hh  tracer.hh
flecsi/exec/test/: future.cc  interface.cc  kernel.cc  kokkos.cc  task.cc
flecsi/flog/: CMakeLists.txt  message.hh  packet.cc  packet.hh  severity.hh  state.cc  state.hh  tag_scope.hh  types.hh  utils.cc  utils.hh
flecsi/io/: CMakeLists.txt  backend.hh  hdf5.hh
flecsi/io/leg/: policy.hh
flecsi/io/mpi/: policy.hh
flecsi/io/test/: hdf5_restart.cc  io_index.cc  io_metadata.cc
flecsi/io/test/leg/: io.cc  test_policy.hh
flecsi/log/: CMakeLists.txt  message.hh  packet.cc  packet.hh  severity.hh  state.cc  state.hh  tag_scope.hh  types.hh  utils.cc  utils.hh
flecsi/run/: CMakeLists.txt  backend.hh  context.cc  context.hh  control.hh  init.hh  options.hh  point_walker.hh  types.hh
flecsi/run/hpx/: context.cc  context.hh
flecsi/run/leg/: context.cc  context.hh  mapper.hh
flecsi/run/local/: context.cc  context.hh
flecsi/run/mpi/: context.cc  context.hh
flecsi/run/test/: cycle.cc  cycle.hh  cycle_control.hh  flog.cc  package_a.hh  package_b.hh  package_c.hh  program-options.cc
flecsi/topo/: CMakeLists.txt  color.hh  core.hh  global.hh  index.hh  size.hh  types.hh  utility_types.hh
flecsi/topo/canonical/: interface.hh  types.hh
flecsi/topo/canonical/test/: canonical.cc
flecsi/topo/narray/: coloring_utils.hh  interface.hh  types.hh
flecsi/topo/narray/test/: coloring_aux_x_9x9x9_3x3x1_fg_4_0.blessed  coloring_aux_x_9x9x9_3x3x1_fg_4_1.blessed  coloring_aux_x_9x9x9_3x3x1_fg_4_2.blessed  coloring_aux_x_9x9x9_3x3x1_fg_4_3.blessed  coloring_aux_xy_9x9x9_3x3x1_4_0.blessed  coloring_aux_xy_9x9x9_3x3x1_4_1.blessed  coloring_aux_xy_9x9x9_3x3x1_4_2.blessed  coloring_aux_xy_9x9x9_3x3x1_4_3.blessed  coloring_primary_9x9x9_3x3x1_4_0.blessed  coloring_primary_9x9x9_3x3x1_4_1.blessed  coloring_primary_9x9x9_3x3x1_4_2.blessed  coloring_primary_9x9x9_3x3x1_4_3.blessed  mesh_1d_4_0.blessed  mesh_1d_4_1.blessed  mesh_1d_4_2.blessed  mesh_1d_4_3.blessed  mesh_2d_4_0.blessed  mesh_2d_4_1.blessed  mesh_2d_4_2.blessed  mesh_2d_4_3.blessed  mesh_3d_4_0.blessed  mesh_3d_4_1.blessed  mesh_3d_4_2.blessed  mesh_3d_4_3.blessed  mesh_diag_4_0.blessed  mesh_diag_4_1.blessed  mesh_diag_4_2.blessed  mesh_diag_4_3.blessed  narray.cc  narray.hh  narray4d.cc  narray_tasks.hh
flecsi/topo/ntree/: coloring.hh  geometry.hh  interface.hh  types.hh
flecsi/topo/ntree/test/: colorer.hh  coordinates.blessed  geometry.cc  ntree.cc  txt_definition.hh
flecsi/topo/set/: interface.hh  types.hh
flecsi/topo/set/test/: mpm_set.cc
flecsi/topo/structured/: box.hh  box_types.hh  box_utils.hh  dependent_entities_colorer.hh  interface.hh  simple_box_colorer.hh  types.hh
flecsi/topo/structured/test/: structured.cc  (+1 more)
flecsi/topo/test/: index.cc
flecsi/topo/unstructured/: closure_old.hh  closure_utils.hh  coloring_functors.hh  coloring_utils.hh  interface.hh  mpi_communicator.hh  types.hh
flecsi/util/: CMakeLists.txt  annotation.hh  array_ref.hh  bitutils.hh  color_map.hh  common.hh  constant.hh  crs.hh  dag.hh  dcrs.hh  demangle.cc  demangle.hh  dimensioned_array.hh  export_definitions.hh  function_traits.hh  gpu_containers.hh  graphviz.hh  hashtable.hh  hpx.hh  mpi.hh  parmetis.hh  reorder.hh  serialize.hh  set_intersection.hh  set_utils.hh  sort.hh  target.hh  tikz.hh  type_traits.hh  types.hh  unit.hh
flecsi/util/geometry/: filling_curve.hh  filling_curve_key.hh  kdtree.hh  point.hh
flecsi/util/test/: annotation.cc  array_ref.blessed.gnug  array_ref.blessed.msvc  array_ref.cc  color_map.cc  common.blessed  common.blessed.gnug  common.blessed.msvc  common.blessed.ppc  common.cc  geometry.cc  hashtable.cc  serialize.cc  set_utils.cc  tuple_walker.cc  unit.cc  unit_task.cc
flecsi/util/unit/: main.cc  output.hh  types.hh
tutorial/: CMakeLists.txt
tutorial/.auxiliary/control-overview/: CMakeLists.txt  control-overview.cc  control-overview.hh
tutorial/1-runtime/: 1-minimal.cc  2-program_options.cc  3-flog.cc  4-caliper.cc  caliper.config
tutorial/2-control/: 1-simple.cc  1-simple.hh  2-cycle.cc  2-cycle.hh  2-subcycle.hh  3-actions.hh  3-dependencies.cc  3-dependencies.hh  4-state.cc  4-state.hh
tutorial/3-execution/: 1-single-task.cc  2-index-task.cc  3-mpi-task.cc  control.hh  main.cc
tutorial/4-data/: 1-global.cc  2-index.cc  3-dense.cc  canonical.hh  control.hh  main.cc
tutorial/5-parallel/: 1-forall.cc  2-reduceall.cc  canonical.hh  control.hh  main.cc
tutorial/6-topology/: control.hh  ntree.cc  ntree_sph.hh  sph_physics.cc  sph_physics.hh
tutorial/specialization/dummy/: dummy.hh
tutorial/specialization/run/: control.hh
tutorial/standalone/flaxpy/: CMakeLists.txt  flaxpy.cc
tutorial/standalone/poisson/: CMakeLists.txt
tutorial/standalone/specialization/: control.hh
(+4367 files in other folders)
